# dycast-desktop

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  ROADMAP.md  cliff.toml  index.html  package-lock.json  package.json  server.py  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-06-13-danmaku-replay-design.md
scripts/: sync-version.mjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cast_record.rs  cast_replay.rs  lib.rs  live_info.rs  ws_relay.rs
src/assets/: main.css
src/assets/font/: font.css
src/components/: CastItem.vue  CastList.vue  ConnectInput.vue  FeedDialog.vue  LiveInfo.vue  LiveInfoItem.vue  LiveStatusPanel.vue  ReplayPanel.vue  SettingsPanel.vue  UpdateDialog.vue
src/components/SidTool/: SidTool.vue  SidToolHelp.vue
src/core/: abogus.js  dycast.ts  emoji.ts  relay.ts  replayer.ts  request.ts  signature.js
src/core/model/: base.ts  core.ts  index.ts  shared.ts
src/core/model/messages/: chat.ts  control.ts  gift.ts  like.ts  member.ts  rest.ts  room_rank.ts  room_stats.ts  room_user_seq.ts  social.ts
src/hooks/: useSettings.ts  useUpdater.ts
src/platform/: http.ts  runtime.ts  websocket.ts
src/platform/browser/: http.ts
src/platform/tauri/: http.ts  websocket.ts
src/utils/: cookieUtil.ts  jsonlRecorder.ts  loashUtil.ts  logUtil.ts  typeUtil.ts
src/views/: IndexView.vue
